ui/style/view_profile.css
/* Header */

header {
    border-bottom: 1px solid var(--background-color-1);    
}

#profile_picture {
    background-color: black;
    border: 1px solid var(--accent-color-2);
    border-radius: 100%;
    width: 100px;
}

#profile_display_name {
    font-weight: bold;
    font-size: 1.2em;
    margin: 0 0 4px 0;
}

#profile_name {
    color: var(--text-color-2);
    font-size: 0.9em;
}

#profile_banner {
    width: 100%;
    height: 100px;
    background-color: var(--accent-color-1);
}

#profile_top_section {
    position: relative;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    top: -30px;
    margin: 0 10px 0 10px;
}

#profile_action_button {
    position: relative;
    top: 30px;
    padding: 5px 14px 5px 14px;
}

#profile_names {
    position: relative;
    display: flex;
    flex-direction: column;
    top: -20px;
    margin: 0 10px 0 10px;
}

#profile_about {
    position: relative;
    display: flex;
    top: -10px;
    margin: 0 10px 0 10px;
}

/* Main */

.note {
    display: flex;
    padding: 5px;
}

.note + .note {
    border-top: 1px solid var(--background-color-1);
}

.note_content {
    font-size: 0.9em;
}

.note_picture {
    width: 40px;
    height: 40px;
    margin: 0 10px 0 0;
    background-color: black;
    border: 1px solid var(--accent-color-2);
    border-radius: 100%;
}

.note_display_name {
    font-size: 0.95em;
    font-weight: bold;
}

.note_name {
    font-size: 0.8em;
    color: var(--text-color-2);
}

